--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,23 @@
   font-style: normal;
 }
 
-
+html, body{
+  scroll-behavior: smooth;
+}
 body{
   background-color: white;
   color: white;
   font-family: "Lexend", sans-serif;
   user-select: none;
+
   
 }
 
 body::-webkit-scrollbar {
   display: none;
 }
+
+
 
 
 .btn-hover {
